# k-anonymity-risk-analysis

./: .gitignore  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml
report/: project4_k_anonymity_report.tex
results/metrics/: experiment_summary.csv
scripts/: run_experiments.py  validate_project.py
slides/: project4_presentation.tex
src/k_anonymity_risk_analysis/: __init__.py  anonymizer.py  config.py  dataset.py  generalization.py  linkage.py  utility.py  validation.py
tests/: test_pipeline.py
